crates/plotnik-tests/tests/02-parser/recovery_validation/negated_field_in_alternation.txt
Q = [
  (pair)
  -key
]
------------------ DIAGNOSTICS -------------------
error: negated grammar fields cannot appear directly in alternations
 --> query.ptk:3:3
  |
3 |   -key
  |   ^^^^
  |
help: move the negated grammar field inside a concrete node alternative
